# Project-FAR

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  PROJECT_STATUS.md  README.md  ROADMAP.md  VERSION.md  far  far_build_backend.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
assets/: README.md
commercial/far-decision-integrity/: AUTHORIZATION_SERVICE.md  DISTRIBUTED_RUNTIME.md  Dockerfile  EVIDENCE_STORE.md  EXTERNAL_IDENTITY.md  INSTRUMENTATION.md  PRODUCTION_OPERATIONS.md  README.md  RECOVERY_AND_DEPLOYMENT.md  RUNTIME_OPERATIONS.md  docker-compose.yml  pyproject.toml
commercial/far-decision-integrity/deploy/: distributed-runtime.json  kubernetes.yaml  oidc.example.json
commercial/far-decision-integrity/docs/: far-agent-semconv-0.1.md  oidc-otlp-deployment.md  refund-authorization-v0.1.md  secured-mvp.md  tenant-security-and-policy-registry-v0.1.md
commercial/far-decision-integrity/src/far_decision_integrity/: __init__.py  adjudicate.py  authorization.py  authorize.py  cli.py  distributed.py  distributed_cli.py  evidence.py  external_identity.py  external_identity_cli.py  external_trace.py  external_trace_cli.py  hardening.py  instrumentation.py  io.py  model.py  oidc.py  operations.py  operations_cli.py  policy_cli.py  policy_impact.py  refund.py  regression.py  regression_cli.py  report.py  secured_service.py  secured_service_cli.py  security.py  service.py  service_cli.py  store.py  store_cli.py  swe_agent.py  trace_cli.py  trace_ingest.py
commercial/far-decision-integrity/tests/: test_adjudication.py  test_authorization_runtime.py  test_core.py  test_distributed.py  test_external_identity.py  test_external_trace.py  test_hardening.py  test_instrumentation.py  test_oidc_otlp.py  test_operations.py  test_package_contract.py  test_policy_impact.py  test_reasoning_regression.py  test_refund_authorization.py  test_runtime_operations.py  test_secured_service.py  test_security.py  test_service.py  test_store.py  test_trace_ingest.py
commercial/far-demo/: .branch-marker  Dockerfile  README.md  VALIDATION_PROTOCOL.md  pyproject.toml  render.yaml
commercial/far-demo/src/far_demo/: __init__.py  app.py  formats.py  validation_app.py
commercial/far-demo/tests/: test_demo.py  test_validation.py
commercial/far-release-assurance/: ARCHITECTURE.md  README.md  pyproject.toml
commercial/far-release-assurance/external-validation/swe-agent-v1.0.0-v1.0.1/: manifest.json
commercial/far-release-assurance/fixtures/e2e/: baseline.json  candidate-blocked.json  candidate-pass.json
commercial/far-release-assurance/schemas/: release-package.schema.json
commercial/far-release-assurance/src/far_release_assurance/: __init__.py  adversarial.py  cli.py  closure.py  compare.py  decision.py  io.py  model.py  reference_agent.py  report.py
commercial/far-release-assurance/tests/: test_adversarial_reference_agent.py  test_compare.py  test_e2e_fixtures.py  test_foundation.py  test_ingestion.py  test_packaging.py  test_report.py
docs/: ARCHITECTURE.md  CANONICAL_MAP.md  CHANGELOG.md  DECISION_LOG.md  OVERVIEW.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SEMANTIC_AUDIT.md  STYLE_GUIDE.md  canonical-map  canonical-map.md  intro.md  mission.md  overview.md  philosophy.md  project-far  project-status.md  proof-assurance-taxonomy.md  scope.md  style-guide.md
examples/: README.md  disagreement-analysis.md  historical-analysis.md  mathematical-proof.md  scientific-investigation.md  simple-investigation.md
far/: README.md  application.md  examples.md  methodology.md  workflow.md
far_validation/: __init__.py  __main__.py  assured_engine.py  certificate.py  diagnostics.py  engine.py  formal_model.py  manifest.py  model.py  mutations.py  oracle.py  tracing.py  trust.py  weakening.py
fara/: README  README.md  architecture.md  omega.md  (+6 more)
(+1982 files in other folders)
