[build-system]
requires = []
build-backend = "far_build_backend"
backend-path = ["."]

[project]
name = "project-far-mechanization"
version = "0.6.0"
description = "Project FAR Phase 3 mechanization MVP"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0,<7",
]

[project.scripts]
far = "mechanization.far_mechanization.cli:main"
