[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "far-decision-integrity"
version = "0.2.0"
description = "Deterministic decision-package validation and adjudication for Project FAR"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
far-decision = "far_decision_integrity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
