[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "far-demo"
version = "0.1.0"
description = "Hosted demonstration interface for Project FAR"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "far-decision-integrity==1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
