[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "far-demo"
version = "0.2.0"
description = "Hosted demonstration interface for Project FAR"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "PyYAML>=6,<7",
  "xmltodict>=0.14,<1",
  "python-docx>=1.1,<2",
  "pypdf>=5,<6",
  "openpyxl>=3.1,<4",
  "far-decision-integrity==1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
